--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -76,6 +76,7 @@
           // AT:base64-encoded JSON with activityId + experienceId
           id: item.propositionId,
           scope: item.mboxName,
+          renderAttempted: true,
           scopeDetails: {
             // AT:base64-encoded JSON with activityId + experienceId + targetType
             id: item.scopeDetailsId,
